Slides from 3-rd part disassembled

--- a/epam/Presentation/03-users.tex
+++ b/epam/Presentation/03-users.tex
@@ -24,321 +24,12 @@
 %	[hideallsubsections]
 }
 
-\begin{frame}{Практика: работа с файловыми объектами}
-	\begin{enumerate}
-		\item Cкопировать файл1 в файл2
-			\pause
-		\item Добиться того, чтобы файл2 состоял из 3 одинаковых копий файла1
-		\item Создать жесткую ссылку на файл1
-		\item Создать символическую ссылку на файл2
-		\item Вывести на экран список всех файлов
-			\pause
-		\item Добавить вывод команды {\tt date} в файл1
-		\item Вывести на экран список всех файлов
-		\item Вывести на экран содержимое файла1 и жесткой ссылки
-		\item Создать именованный канал (PIPE)
-		\item Запустить одну команду {\tt cat} на чтение из PIPE
-		\item Записать содержимое файла1 и файла2 в PIPE
-		\item Удалить временную директорию
-	\end{enumerate}
-\end{frame}
-\begin{frame}{Многопользовательская модель}   
- \begin{itemize}
-   \item Linux -- многопользовательская система
-   \item Привилегии пользователей
-     \begin{itemize}
-       \item root
-       \item other users
-      \end{itemize}
-     \end{itemize}
-\end{frame}
-\section{Механизмы разделения привилегий}
-\subsection{Классический UNIX}
-\begin{frame}{Пользователи, группы и файлы}
-\begin{itemize}
-  \item Каждый пользователь принадлежит одной или нескольким \textbf{группам}
-  \item Каждый файл и директория принадлежит
-    \begin{itemize}
-      \item Одному пользователю 
-      \item Одной группе
-    \end{itemize}
-  \pause
-  \item  Разрешения что либо делать с файлом определяются по отношению к
-    \begin{enumerate}
-      \item Пользователю-владельцу файла
-      \item Группе владеющей файлом
-      \item Всем остальным пользователям
-    \end{enumerate}
+\mode<all>{\input{../../slides/multiuser/multiuser-model.tex}}
 
-\end{itemize}
-\pause
-\begin{columns}
-  \column{0.48\textwidth}
-  \begin{itemize}
-    \item {\tt ls -l} 3,4 поле 
-    \item {\tt groups}
-   \end{itemize}
-  \column{0.48\textwidth}
-  \begin{block}{Попробовать}
-    {\tt ls -l /usr/bin/}
+\mode<all>{\input{../../slides/multiuser/fs-permissions.tex}}
 
-    {\tt groups}
+\mode<all>{\input{../../slides/multiuser/account_files.tex}}
 
-    {\tt groups root}
-  \end{block}
-\end{columns}
-\end{frame}
-
-\begin{frame}{Типы разрешений для файлов}
-\begin{columns}
-\column{0.48\textwidth}
-\begin{center}
-  \textbf{Разрешения для файла}
-\end{center}
-\begin{itemize}
-  \item Три типа разрешений
-    \begin{enumerate}
-      \item чтение read(r)
-      \item запись write(w)
-      \item выполнение execute(x)
-    \end{enumerate}
-\end{itemize}
-\column{0.48\textwidth}
-\begin{center}
-  \textbf{Разрешения для директорий}
-\end{center}
-\begin{itemize}
-  \item Три типа разрешений
-    \begin{enumerate}
-      \item поиск файлов в директории read(r) 
-      \item добавление и удаление файлов write(w)
-      \item заход в директорию execute(x)
-    \end{enumerate}
-\end{itemize}
-\end{columns}
-
-\pause
-
-Попробовать {\tt ls -l /usr/bin}
-
-\pause
-
-Пересчет мнемонического разрешения в битовую маску 
-
-$r\to4, w\to2 , x\to1$ 
-
-rwxrw-r-x$\to$765
-\end{frame}
-
-\begin{frame}{Команды для управления пользователями и разрешениями файлов}
-\begin{columns}
- \column{0.48\textwidth}
- \begin{itemize}
-   \item {\tt chown}
-   \item {\tt chmod}
- \end{itemize}
- \column{0.48\textwidth}
- \begin{itemize}
-   \item {\tt useradd, usermod, userdel}
-   \item {\tt groupadd, groupmod, groupdel}
-   \item {\tt su, sudo}
- \end{itemize}
-\end{columns}
-\end{frame}
-
-\begin{frame}
-\begin{block}{Упражнения}
-  \begin{enumerate}
-   \item Создать директорию без r разрешения но с x разрешением, внутри нее создать поддиректорию с rwx разрешениями (для пользователя altlinux)
-   \item Создать нового пользователя testuser.
-   \item Скопировать {\tt /bin/bash} (под именем mysh) в домашнюю директорию пользователя altlinux  и поставить r-x разрешение только для other
-   \item Попробовать выполнить скопированный файл от имени пользователя altlinux, затем от имени пользователя testuser
-   \item Создать новую группу testgroup
-   \item Изменить группу владеющую mysh на testgroup и сделать {\tt chmod 464 mysh}
-   \item Попробовать выполнить mysh от имени altlinux и root. 
-   \item Добавить пользователя altlinux в группу testgroup и попробовать выполнить mysh еще раз
-   \item Получить список групп которым принадлежат устройства в {\tt /dev}
-  \end{enumerate}
-\end{block}
-\end{frame}
-
-\begin{frame}{SUID программы}
- \begin{block}{Попробовать}
-   {\tt id}
-
-   {\tt ls -l `which su`}
- \end{block}
- \pause
- \begin{itemize}
-   \item Некоторые программы должны выполняться от имени обычного пользователя, но иметь больше привилегий
-   \item Для этого у них устанавливается suid или sgid биты
-   \item Установка suid (например {\tt chmod 4710 <file>})
- \end{itemize}
- \pause
- \begin{block}{Упражнение}
-   \begin{itemize}
-     \item Под root создать копию утилиты {\tt id} (назвать, например, {\tt id2}) в директории /usr/bin/
-     \item Установить suid бит для этой утилиты
-     \item Запустить {\tt id2} от имени пользователя altlinux
-     \item То же с sgid битом
-    \end{itemize}
- \end{block}
-\end{frame}
-
-\begin{frame}{Опасности SUID}
-  \begin{itemize}
-    \item Возможность backdoor через suid программу
-      \begin{itemize}
-        \item Shell игнорирует effective uid
-        \item Скрипты обычно тоже игнорируют
-        \item nosuid mount option
-       \end{itemize}
-     \item Атака через buffer overflow в существующей suid программе
-       \begin{itemize}
-         \item не использовать strcpy, sprintf, ... в security critical
-         \item А если все же не уследили
-           \begin{itemize}
-             \item рандомизация стека
-             \item grsecurity
-             \item частично selinux
-           \end{itemize}
-       \end{itemize}
-   \end{itemize}
-\end{frame}
-
-
-\begin{frame}{SUID, SGID и sticky bit для директорий}
-  \begin{itemize}
-    \item sgid для директорий -- все поддиректории и файлы внутри имеют тот же group id
-    \item suid -- игнорируется
-    \item Зато есть sticky bit 
-   \end{itemize}
-\end{frame}
-
-% End of 5-th lecture
-
-\begin{frame}{Хранение информации о пользователях в системе}
-
-	\begin{block}{\tt /etc/group}
-		{\tt  group\_name:password:GID:user\_list}
-	\end{block}
-	
-	\pause
-
-	\begin{block}{\tt /etc/passwd}
-		{\tt account:password:UID:GID:GECOS:directory:shell}
-
-		\begin{itemize}
-			\item {\tt *} -- пароль не задан
-			\item {\tt x} -- пароль задан в файле {\tt /etc/shadows}
-		\end{itemize}
-	\end{block}
-
-	\pause
-
-	\begin{block}{\tt /etc/shadow}
-		\begin{enumerate}
-			\begin{columns}
-			\column{0.3\textwidth}
-
-			\item login name
-			\item encrypted password
-			\item date of last password change
-
-			\column{0.3\textwidth}		
-			\item minimum password age 
-			\item maximum password age
-			\item password warning period
-
-			\column{0.3\textwidth}
-			\item password inactivity period
-			\item account expiration date
-			\item reserved field
-
-			\end{columns}
-		\end{enumerate}
-	\end{block}
-
-\end{frame}
-
-\begin{frame}{Практическое задание}
-    \begin{itemize}
-		\item Посмотреть права доступа к файлам {\tt group}, {\tt passwd}, {\tt shadow}\\
-			{\tt ls -l /etc/{group, passwd, shadow}}
-		\item Добавить пользователя и группу и посмотреть изменения в перечисленных файлах
-		\item Cоздать пользователя без использования системных утилит
-    \end{itemize}
-	\pause
-	 \begin{itemize}
-		\item Изменить пароль пользователю с помощью утилиты {\tt passwd}\\
-			Hint: {\tt /etc/passwdqc.conf}
-		\item Сбросить пароль пользователю\\
-			Hint: {\tt usermod}
-    \end{itemize}
-\end{frame}
-
-
-\begin{frame}{PAM}
-	% http://www.opennet.ru/base/net/pam_linux.txt.html
-	\begin{itemize}
-		\item PAM это динамическая библиотека
-		\item Конфигурация PAM
-			\begin{itemize}
-				\item {\tt /etc/pam.conf}
-				\item {\tt /etc/pam.d/...}
-					\begin{itemize}
-						\item Сервисы
-						\item system\_auth
-					\end{itemize}
-			\end{itemize}
-	\end{itemize}
-
-	\begin{block}{Формат записи}
-		\begin{columns}
-			\column{0.245\textwidth}
-			\textbf{module type}
-			 \begin{itemize}
-				 \item auth
-				 \item account
-				 \item session
-				 \item password
-			 \end{itemize}
-			 \column{0.245\textwidth}
-			 \textbf{control flag}
-			 \begin{itemize}
-				 \item requisite
-				 \item required
-				 \item sufficient
-				 \item optional
-			 \end{itemize}
-			 \column{0.245\textwidth}
-			 \textbf{module name}
-			 \column{0.245\textwidth}
-			 \textbf{module options}
-		 \end{columns}
-	 \end{block}
-\end{frame}
-
-\begin{frame}{Диспетчер службы имен (NSS)}
-
-	Важная информация для системы:
-		
-	\begin{itemize}
-		\item Информация о пользователях (логин, группа, пароль и т.д.)
-		\item Информация о сетевых ресурсах (имена хостов, протоколов, сервисов)
-    \end{itemize}
-
-	\pause
-
-	\begin{block}{NSS}
-		\begin{itemize}
-			\item Конфигурация: {\tt /etc/nsswitch.conf}
-			\item Динамические библиотеки сервисов: {\tt ls -1 /lib*/libnss\_*}
-		\end{itemize}
-	\end{block}
-
-\end{frame}
-
-
+\mode<all>{\input{../../slides/multiuser/pam.tex}}
 
 \end{document}
