Slides from 5-th part disassembled

--- a/epam/Presentation/19-packaging.tex
+++ b/epam/Presentation/19-packaging.tex
@@ -30,6 +30,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Введение}
+% TODO: merge with intro1
 \mode<all>{\input{../../slides/packaging/intro}}
 
 \section{RPM}
