--- a/epam/Presentation/05-packages.tex
+++ b/epam/Presentation/05-packages.tex
@@ -25,182 +25,12 @@
 %	[hideallsubsections]
 }
 
-%\section{}
-\begin{frame}{Система управления пакетами: для чего это нужно}
-\begin{itemize}
- \item ''DLL Hell''
- \item Dependency hell
- \item Общие задачи пакетного менеджера:
-   \begin{itemize}
-     \item Проверка целостности пакетов
-     \item Проверка зависимостей пакетов
-        \item Поддержание списка установленных пакетов
-        \item Автоматическое удаление пакетов
-     \item Предоставление доступа к репозиторию пакетов
-     \item Разрешение зависимостей
-   \end{itemize}
-\end{itemize}
-\end{frame}
 
-\begin{frame}{Debian-based и RedHat-based системы управления пакетами}
-\begin{center}
- \textbf{Два уровня пакетных менеджеров}
-\end{center}
-\begin{columns}
-  \column{0.4\textwidth}
-  \begin{center}
-    \textbf{RedHat-based}
-  \end{center}
-  \begin{itemize}
-    \item yum
-    \item rpm
-  \end{itemize}
-  \column{0.4\textwidth}
-  \begin{center}
-    \textbf{Debian-based}
-  \end{center}
-  \begin{itemize}
-    \item aptitude, apt, synaptic
-    \item dpkg
-  \end{itemize}
-\end{columns}
-\end{frame}
+% TODO: merge with intro
+\mode<all>{\input{../../slides/packaging/intro1}}
 
-\begin{frame}{RPM: структура пакета}
-	\begin{itemize}
-		\item Метаданные
-			\begin{itemize}
-				\item Имя
-				\item Версия/Релиз
-				\item Группа
-				\item Описание
-				\item ...
-			\end{itemize}
-		\item Архив с файлами
-			\begin{itemize}
-				\item cpio
-			\end{itemize}
-		\item Скрипты
-			\begin{itemize}
-				\item Pre Install
-				\item Post Install
-				\item Pre Uninstall
-				\item Post Uninstall \bigskip
-				\item Triggers
-			\end{itemize}
-	\end{itemize}
-\end{frame}
+\mode<all>{\input{../../slides/packaging/rpm}}
 
-\begin{frame}{RPM: команды}
-	\begin{block}{Установка пакета}
-		{\tt rpm -i [rpm-file1] ... [[url://]rpm-fileN] }
-	\end{block}
-	\begin{block}{Удаление пакета}
-		{\tt rpm -e pkgname1 ... pkgnameN }
-	\end{block}
-	\begin{block}{Обновление пакета}
-		{\tt rpm -U [rpm-file1] ... [[url://]rpm-fileN] }
-	\end{block}
-	\begin{block}{Проверка пакета}
-		{\tt rpm -V pkgname1 ... pkgnameN }
-	\end{block}
-\end{frame}
-
-\begin{frame}{RPM: часто используемые опции опроса}
-
-	\begin{itemize}
-		\item {\tt pkgname} -- выбор пакета, установленного в системе
-		\item {\tt -a} -- все пакеты, установленные в системе
-		\item {\tt -p} -- использовать файл RPM
-	\end{itemize}
-
-
-	\begin{itemize}
-		\item {\tt -i} -- показать информацию пакета\\
-			{\tt rpm -q -i glibc }
-		\item {\tt -l} -- показать список файлов пакета \\
-			{\tt rpm -q -l glibc }
-		\item {\tt --whatprovides} -- \\
-			{\tt rpm -q --whatprovides java}
-		\item {\tt --whatrequires} -- \\
-			{\tt rpm -q --whatrequires /bin/bash}
-		\item {\tt --queryformat} -- формат вывода\\
-			{\tt rpm -q --whatrequires /bin/bash --queryformat ''\%\{name\} ''}
-
-	\end{itemize}
-
-\end{frame}
-
-
-\begin{frame}{Репозиторий}
-	\begin{block}{Репозиторий пакетов}
-		Место, где хранятся и поддерживаются пакеты, а также сопутствующая мета-информация, предназначенное для использования пакетным менеджером.
-	\end{block}
-	\begin{block}{Пример: Fedora Core}
-		\begin{itemize}
-			\item Packages/*.rpm
-			\item RPM-GPG-KEY-*
-			\item repodata
-			\begin{itemize}
-				\item множество сжатых и несжатых XML файлов для YUM
-			\end{itemize}
-		\end{itemize}
-
-		Описание репозтория для YUM на локальной системе хранится по пути
-		{\tt /etc/yum.repos.d/*.repo}
-	\end{block}
-		
-\end{frame}
-
-\begin{frame}{YUM: команды}
-	\begin{block}{Установка/обновление пакета}
-		{\tt yum install pkgname }
-	\end{block}
-	\begin{block}{Обновление всех пакетов}
-		{\tt yum update }
-	\end{block}
-	\begin{block}{Удаление пакета}
-		{\tt yum remove pkgname }
-	\end{block}
-	\begin{block}{Поиск}
-		{\tt yum list pkgname }\\
-		{\tt yum search pkgname }
-	\end{block}
-\end{frame}
-
-
-\begin{frame}[fragile]{Упражнение}
-  \begin{enumerate}
-      \item Создать на {\tt /dev/sda} раздел размером примерно 10Gb
-      \item Создать на этом разделе ext3 ФС и смонтировать раздел в {\tt /mnt/chroot}
-      \item Развернуть {\tt /media/nfs/pub/CentOS/precreated/centOS.tar.gz} в {\tt /mnt/chroot}
-      \item Смонтировать {\tt proc, sysfs} а также {\tt /dev} в соответствующие места {\tt /mnt/chroot}
-      \item {\tt chroot /mnt/chroot}
-      \item Отредактировать {\tt /etc/resolv.conf} -- скопировать туда информацию из {\tt resolv.conf} основной системы
-      \item Отредактировать {\tt /etc/yum.conf} Добавить следующий раздел
-\begin{minipage}{0.5\textwidth}
-\begin{verbatim}
-[base]
-  name = CentOS 6
-  baseurl = ftp://192.168.11.15/CentOS
-  gpgcheck = 0
-\end{verbatim}
-\end{minipage}
-\setcounter{tmpc}{\theenumi}
-\end{enumerate}
-\end{frame}
-\begin{frame}{Продолжение упражнения}
-  \begin{enumerate}
-      \setcounter{enumi}{\thetmpc}
-      \item {\tt yum update}
-      \item Установить пакет vim
-      \item Посмотреть списки файлов для пакетов {\tt yum, rpm}
-      \item Найти пакет предоставляющий сервис ssh и установить его
-      \item Удалить пакет vim
-    \end{enumerate}
-\end{frame}
-
-
-
+\mode<all>{\input{../../slides/packaging/repo}}
 
 \end{document}
