--- a/epam/Presentation/14-autotools_and_doxygen.tex
+++ b/epam/Presentation/14-autotools_and_doxygen.tex
@@ -1,6 +1,8 @@
 \input{common}
 \title[toolchain]{GNU Toolchain}
 
+\mode<all>{\input{../../slides/toolchain/tikzinclude}}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Begin Document  %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
