--- a/epam/Presentation/common.tex
+++ b/epam/Presentation/common.tex
@@ -4,11 +4,11 @@
 \usecolortheme{wolverine}
 
 %Packages to be included
+\usepackage{graphicx}
 
 \usepackage[russian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-
 
 %%\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
 
