Fixes for handbook

--- a/epam/Presentation/common.tex
+++ b/epam/Presentation/common.tex
@@ -4,7 +4,7 @@
 \usecolortheme{wolverine}
 
 %Packages to be included
-\usepackage{graphicx}
+%\usepackage{graphicx}
 
 \usepackage[russian]{babel}
 \usepackage[utf8]{inputenc}
