--- a/slides/multiuser/multiuser-model.tex
+++ b/slides/multiuser/multiuser-model.tex
@@ -9,8 +9,8 @@
      \end{itemize}
 \end{frame}
 
-\section{Механизмы разделения привилегий}
-\subsection{Классический UNIX}
+%\section{Механизмы разделения привилегий}
+%\subsection{Классический UNIX}
 
 \begin{frame}{Пользователи, группы и файлы}
 \begin{itemize}
