Remove cplusplusism: malloc void * pointer casts from C code
malloc() returns void * pointer. In C++ it's mandatory to have
an explicit cast in that case, but in C it's possible to use
simple assignment (C99, 6.5.16.1):

  Constraints

  One of the following shall hold:
  ...
  — one operand is a pointer to an object or incomplete type
    and the other is a pointer to a qualified or unqualified
    version of void, and the type pointed to by the left has
    all the qualifiers of the type pointed to by the right;

In C the explicit cast is considered as a bad programming
style.

$ cat 1.c

char * foo()
{
        char *f = malloc(10);

        return f;
}

$ g++ -c -Wall -Wextra 1.c
1.c: In function ‘char* foo()’:
1.c:6:21: error: invalid conversion from ‘void*’ to ‘char*’ [-fpermissive]

$ gcc -c -Wall -Wextra 1.c
$ echo $?
0

Signed-off-by: Yauheni Kaliuta <y.kaliuta@gmail.com>

--- a/slides/debug/valgrind.tex
+++ b/slides/debug/valgrind.tex
@@ -46,7 +46,7 @@ main(void)
 {
 char *array;
 
-    array = (char *) malloc(10*sizeof(char));
+    array = malloc(10*sizeof(char));
     array[10] = 'x';
     free( array);
     exit(0);
@@ -65,7 +65,7 @@ char *array;
 int i;
 
 for( i=0; i<100; i++)
-    array = (char *) malloc(10*sizeof(char));
+    array = malloc(10*sizeof(char));
 
 free( array);
 	\end{lstlisting}
@@ -82,7 +82,7 @@ free( array);
 	\frametitle{Упражнение: объем выделенной памяти}
 
 	\begin{lstlisting}
-array = (char *) malloc(1<<31);
+array = malloc(1<<31);
 array[10000] = 0;
 	\end{lstlisting}
 
