Update presentations for better conversion support

--- a/epam/Presentation/01-intro.tex
+++ b/epam/Presentation/01-intro.tex
@@ -15,18 +15,18 @@
 \section{Введение}
 
 
-\frame{
+\begin{frame}
 	\frametitle{}
 	\titlepage
 	\vspace{-0.5cm}
 	\begin{center}
 	%\frontpagelogo
 	\end{center}
-}
-\frame{
+\end{frame}
+\begin{frame}
 	\tableofcontents
 %	[hideallsubsections]
-}
+\end{frame}
 
 
 
