--- a/epam/Presentation/02-command.tex
+++ b/epam/Presentation/02-command.tex
@@ -9,18 +9,18 @@
 
 \begin{document}
 
-\frame{
+\begin{frame}
 	\frametitle{}
 	\titlepage
 	\vspace{-0.5cm}
 	\begin{center}
 	%\frontpagelogo
 	\end{center}
-}
-\frame{
+\end{frame}
+\begin{frame}
 	\tableofcontents
 %	[hideallsubsections]
-}
+\end{frame}
 
 \section{Командная строка}
 %\subsection{Командная оболочка}
