--- a/epam/Presentation/04-disk.tex
+++ b/epam/Presentation/04-disk.tex
@@ -12,18 +12,18 @@
 
 \begin{document}
 
-\frame{
+\begin{frame}
 	\frametitle{Дисковая подсистема}
 	\titlepage
 	\vspace{-0.5cm}
 	\begin{center}
 	%\frontpagelogo
 	\end{center}
-}
-\frame{
+\end{frame}
+\begin{frame}
 	\tableofcontents
 %	[hideallsubsections]
-}
+\end{frame}
 
 %\section{}
 
