--- a/epam/Presentation/06-network.tex
+++ b/epam/Presentation/06-network.tex
@@ -11,18 +11,19 @@
 
 \begin{document}
 
-\frame{
+\begin{frame}
 	\frametitle{Сетевые интерфейсы Linux}
 	\titlepage
 	\vspace{-0.5cm}
 	\begin{center}
 	%\frontpagelogo
 	\end{center}
-}
-\frame{
+\end{frame}
+\begin{frame}
 	\tableofcontents
 %	[hideallsubsections]
-}
+\end{frame}
+
 \mode<all>{\input{../../slides/networking/intro}}
 
 \mode<all>{\input{../../slides/networking/interface-management}}
