--- a/epam/Presentation/03-users.tex
+++ b/epam/Presentation/03-users.tex
@@ -11,18 +11,18 @@
 
 \begin{document}
 
-\frame{
+\begin{frame}
 	\frametitle{}
 	\titlepage
 	\vspace{-0.5cm}
 	\begin{center}
 	%\frontpagelogo
 	\end{center}
-}
-\frame{
+\end{frame}
+\begin{frame}
 	\tableofcontents
 %	[hideallsubsections]
-}
+\end{frame}
 
 \mode<all>{\input{../../slides/multiuser/multiuser-model.tex}}
 
