--- a/epam/Presentation/05-packages.tex
+++ b/epam/Presentation/05-packages.tex
@@ -12,18 +12,18 @@
 
 \begin{document}
 
-\frame{
+\begin{frame}
 	\frametitle{Система управления пакетами}
 	\titlepage
 	\vspace{-0.5cm}
 	\begin{center}
 	%\frontpagelogo
 	\end{center}
-}
-\frame{
+\end{frame}
+\begin{frame}
 	\tableofcontents
 %	[hideallsubsections]
-}
+\end{frame}
 
 
 % TODO: merge with intro
