Changed 'licenses' part

--- a/slides/intro/licenses.tex
+++ b/slides/intro/licenses.tex
@@ -1,7 +1,27 @@
+\begin{frame}{Авторское право и лицензии}
+
+	\begin{block}{Авторское право}
+		 Возникает по факту создания ПО 
+
+		\begin{itemize}
+			\item Неимущественные права
+			\item Имущественные права
+		\end{itemize}
+	\end{block}
+
+	\pause
+
+	\begin{block}{Лицензии}
+		Лицензия -- средство передать какие-либо права на продукт либо его часть.
+
+		Необходима для защиты авторских прав. 
+		Средство для возможности законно пресечь несанкционирование копирование,  использование или распространение ПО. 
+	\end{block}
+\end{frame}
+
+
 \begin{frame}{Лицензии: открытые и свободные}
-
 	\begin{block}{ Р.Столлман: 4 свободы}
-
 		\begin{itemize}
 			\item Свобода 0: Свобода запускать программу в любых целях.
 			\item Свобода 1: Свобода изучения работы программы и адаптация её к вашим нуждам. 
@@ -12,13 +32,52 @@
 				Доступ к исходным текстам является необходимым условием.
 		\end{itemize}
 	\end{block}
+\end{frame}
 
+
+\begin{frame}{Лицензии: permissive}
+	\begin{columns}
+	\column{0.3\textwidth}
+		\center\includegraphics[width=2cm]{../../slides/intro/three-arrows@2x.png}
+
+	\column{0.6\textwidth}
+
+	\begin{itemize}
+		\item BSD
+		\item MIT
+		\item Apache
+	\end{itemize}
+	\end{columns}
+
+	\begin{block}{I want it simple and permissive.}
+		\begin{itemize}
+			\item практически не ограничивают свободу действий пользователей ПО и разработчиков, работающих с исходным кодом.
+			\item По своему духу, распространение работы под пермиссивной лицензией схоже с помещением работы в общественное
+				достояние, но не требует отказа от авторского права.
+		\end{itemize}
+	\end{block}
 
 \end{frame}
 
-\begin{frame}{Copyleft }
 
-	\begin{block}{ \textcopyleft  -- ``Копилефт''}
+\begin{frame}{\textcopyleft -- Copyleft}
+
+	\begin{columns}
+	\column{0.3\textwidth}
+		\center\includegraphics[width=2cm]{../../slides/intro/circular@2x.png}
+
+	\column{0.6\textwidth}
+
+	\begin{itemize}
+		\item GPL
+		\item LGPL
+		\item AGPL
+	\end{itemize}
+	\end{columns}
+
+
+	\begin{block}{I care about sharing improvements.}
+	
 	Авторское лево -- концепция и практика использования законов авторского права для обеспечения 
 	невозможности ограничить любому человеку право использовать,  изменять и распространять как 
 	исходное произведение,  так и произведения,  производные от него.
@@ -31,15 +90,4 @@
 \end{frame}
 
 
-\begin{frame}{Лицензии}
-	\begin{itemize}
-		\item GPL
-		\item LGPL
-		\item AGPL
-		\item BSD
-		\item MIT
-		\item Mozilla Public License
-		\item Apache Software License
-		\item Creative Commons *
-	\end{itemize}
-\end{frame}
+
