--- a/epam/Presentation/common.tex
+++ b/epam/Presentation/common.tex
@@ -59,7 +59,7 @@
     morestring=[b]",
 }
 
-\author[Epam]{{\bf Epam}\\Embedded solutions department}
+\author[Epam]{{\bf Epam}\\Low Level Programming Department}
 
 %\institution[EPAM]{EPAM}
 %\logo{\includegraphics[width=1cm]{logo.png}}
