--- a/epam/slides/intro-epam.tex
+++ b/epam/slides/intro-epam.tex
@@ -17,9 +17,14 @@
 			\pause
 		\item "Ежедневные" навыки работы в консоли
 			\pause
-		\item Введение в shell-программирование
+		\item Языки программирования
+			\begin{itemize}
+					\item shell (Bash)
+					\item Python
+					\item C
+			\end{itemize}
 			\pause
-		\item Работа с классическими средствами разработки
+		\item Работа с классическими средствами разработки для ОС Linux
 			\pause
 		\item Все, чего вы не знали и боялись спросить
 	\end{itemize}
